fix word break on chrome and fix width for text fit

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -679,3 +679,7 @@ span {
   content: "\e638";
 
 }
+
+.word-break {
+  word-break: break-word;
+}
